Assignment4/src/objects/Feedback__c.object
<CustomObject>
    <description>Feedback for the sessions which you attended.</description>
    <fields>
        <fullName>Comment__c</fullName>
        <description>Comment for the sessions which attendee attended.</description>
        <inlineHelpText>Give comment on the sessions which you attended .</inlineHelpText>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <description>Rating of the sessions which attendees attended (5 is the highest rating and 1 is the lowest)</description>
        <inlineHelpText>Give the ratings of the sessions which you attended.</inlineHelpText>
        <label>Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Session__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Session name</description>
        <inlineHelpText>Which Session attendee attended.</inlineHelpText>
        <label>Session</label>
        <referenceTo>Training_Session__c</referenceTo>
        <relationshipLabel>Feedbacks</relationshipLabel>
        <relationshipName>Feedbacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Feedback</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Feedback Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Feedbacks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>